create intro of page home

--- a/frontend-react-namx/src/index.css
+++ b/frontend-react-namx/src/index.css
@@ -2,18 +2,33 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-  height: 100%;
-  overflow-y: auto;
-}
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,700");
 
+/******************* FIXES FOR CN VERSION *******************/
+.cn .ctrlDesc {
+  font-size: 10px;
+}
+.cn #btnVR .ctrlDesc {
+  left: -10px;
+}
+html,
 body {
   margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
+  background: #393533;
+  color: #fff;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
     "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  z-index: -100 !important;
 }
+
 
 /* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
